index.css
*, *::before, *::after {
    box-sizing: border-box;    
}

.error-text{
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 5rem;
    text-align: center;
}

.backbtn-blog-container{
    margin-top: 1.6em;
    margin-left: 0.9em;
}

.about-header{
    display: flex;

    width: 100%;
    justify-content: center;
    position: relative;
}

.backbtn-about{
    position: absolute;
    padding-top: 0.3em;
}

html, body {
height: 100%;
margin: 0;
overflow-x: hidden; /* prevent horizontal scroll */
}

body {
    margin: 0;
    padding: 0;
    font-family: "Inter", sans-serif;
    background-color: #323030;
    color: #ffffff;
    min-height: 100vh;
    background-image: 
        linear-gradient(to right, #80808012 1px, transparent 1px),
        linear-gradient(to bottom, #80808012 1px, transparent 1px);
    background-size: 24px 24px;
    z-index: 0;
}

.after-effect {
  position: relative; /* important! so ::after is scoped */
  overflow: hidden;   /* optional: prevents bleed outside container */
}

.after-effect::after {
  content: "";
  position: absolute; /* relative to .after-effect now */
  inset: 0;
  background: radial-gradient(
    circle,
    rgba(255,255,255,0) 70%,
    rgba(50, 48, 48, 1) 100%
  );
  pointer-events: none;
  z-index: 1;
}

header {
    display: flex;
    flex-direction: column;
    align-items: center;
}

h1 {
    padding-top: 0.5em;
    margin: 0;
    font-weight: 400;
    font-size: 14vw;
    letter-spacing: .09em;
    line-height: 1.5em;
}

.nav-container{
    display: flex;
    flex-direction: column;
    font-family: "Inter", sans-serif;
    margin: 0 1em;
    width: 100%;
    text-align: center;
    gap: 1rem;
    margin-top: 5em;
    justify-content: center;
}

.nav-block{
    width: 100%;
    font-size: 2.5rem;
    font-weight: 400;
    border-radius: 2px;
    letter-spacing: 0.3em;
    margin-bottom: 2em;

}

.home-btn{
    display: flex;
    justify-content: center;
    font-size: 2rem;
    width: fit-content;
    background-color: #343131;
    padding: 0.5em;
    border-radius: 5px;
    border: solid 1px rgb(107, 105, 105);
    font-weight: 200;
    color: rgb(179, 177, 177);
    transition:
    transform 0.1s ease;
    border: 0.1s ease;
}

.home-btn:hover{
    background-color: #322f2f;
    color: rgb(217, 215, 215);
    transform: scale(1.2);
    border: solid 1px white;
}


.home-btn-container{
    display: flex;
    justify-content: center;
}

@keyframes animatedTextGradient {
  from {
    background-position: 0% center;
  }
  to {
    background-position: 200% center;
  }
}

.text-animation{
        background: linear-gradient(
        90deg,
        #ad49a5,
        #9278a4 50%,
        #dc7c91 75%,
        #d4758a 75%,
        #ad49a5
    );
    background-size: 200% auto;
    background-clip: text;
    -webkit-text-fill-color: transparent;
    animation: animatedTextGradient 3s linear infinite;
}

.text-animation2{
        background: linear-gradient(
        90deg,
        #ffffff,
        #e3e2e4 50%,
        #d2cfcf 75%,
        #d0cdcd 75%,
        #ffffff
    );
    background-size: 200% auto;
    background-clip: text;
    -webkit-text-fill-color: transparent;
    animation: animatedTextGradient 3s linear infinite;
}

a {
    text-decoration: none;
    color: #d3d0c9;
}

.back-btn{
    background-color: transparent;
    border: none;
    cursor: pointer;
    top: 2em;
    left: 1em;
}

.about-title{
    display: flex;
    justify-content: center;
    font-weight: 250;
    font-size: 2rem;
    letter-spacing: 3px;
    margin: 1em 0;
}

.writing{
    padding: 0 1em;
    line-height: 1.5em;
    font-size: 1rem;
    color: #fffcf4;
}

.about-img{
    width: 40%;
    aspect-ratio: 1 / 1;
    border-radius: 50%;
    object-fit: cover;
    box-shadow: 0 0 20px rgb(39, 38, 38);
}

.img-container{
    display: flex;
    justify-content: center;
    margin-bottom: 2em;
}

.about-container{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin-bottom: 2em;
}


p {
    padding: 0;
    margin: 0;
}

.fade-in {
  opacity: 0;
  animation: fadeIn 1s ease-in forwards;
}

@keyframes fadeIn {
  from { opacity: 0; }
  to { opacity: 1; }
}

.bold{
    font-weight: bold;
}

footer{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 1em;
    
}

.mail-logo{
    margin-top: 9px;
}


.blog-card{
    background: rgba(150, 135, 135, 0.1);
    box-shadow: 0 0 20px rgb(39, 38, 38);
    backdrop-filter: blur(1px);
    padding: 0.3em 1em;
    border-radius: 15px;
    overflow: auto;
    margin-bottom: 0.8em;
    position: relative;
}

.blog-card-title{
    margin-bottom: 0.1em;
    font-weight: 400;
}

.blog-card-date{
    opacity: 60%;
    margin-bottom: 0;
    font-weight: 300;
    font-size: 0.8rem;
}

.blog-card-desc{
    margin-top: 0.5em;
    font-weight: 300;
    font-size: 1rem;
}

.blog-card-container{
    width: 90%;
    margin: 0 auto;
}

.center{
    text-align: center;
}

.blog-post-container{
    margin: 1em 1em 2em 1em;
    background: rgba(150, 135, 135, 0.1);
    box-shadow: 0 0 20px rgb(39, 38, 38);
    backdrop-filter: blur(1px);
    border-radius: 15px;
    padding: 1em;
}

.blog-post-date{
    font-size: 1rem;
    font-weight: 300;
    opacity: 60%;
    margin-top: 0.2em;
    margin-bottom: 0;
}
.blog-post-title{
    margin: 0;
    font-weight: 400;
}

.writing-container{
    background: rgba(150, 135, 135, 0.1);
    box-shadow: 0 0 20px rgb(39, 38, 38);
    backdrop-filter: blur(1px);
    border-radius: 15px;
    margin: 1em 1em 0 1em;
    padding: 0.8em 0;

}

.tag-container{
    margin-top: 1em;
    display: flex;
    gap: 0.5rem;
    padding-bottom: 0.5em;
    font-size: 0.6rem;
    opacity: 60%;
    margin-bottom: 1em;

}

.project-tag{
    border: solid 0.5px;
    border-radius: 5px;
    padding: 0.2em 0.5em;
}

.share-icon{
    position: absolute;
    top: 15px;
    right: 15px;
}

.blog-card-arrow{
    position: absolute;
    bottom: 5px;
    right: 5px;
}

@media (min-width: 768px) and (max-width: 1024px) {
    .about-img{
        width: 30%;
        margin-bottom: 2em;
    }
  
    .about-title{
        font-size: 3rem;
    }

    .about-container{
        margin: 0 5em;
    }

    .footer-home{
        display: flex;
        gap: 4em;
    }

    .footer-about{
        margin-top: 2em;
        display: flex;
        gap: 4em;
    }

    .writing{
        font-size: 1.2rem;
    }

    .project-tag{
        border: solid 1px;
    }

    .nav-block{
        font-size: 3.5rem ;
    }
    
    .blog-post-container{
        font-size: 1.6rem;
    }

    .blog-card-desc{
        font-size: 1.1rem;
    }

    .blog-card-container{
        max-width: 700px;
    }



}

@media (min-width: 1025px){
    h1 {
        font-size: 10vw;
        padding: 0;
    }

    .project-tag{
        font-size: 0.7rem ;
    }

    .layout{
        display: flex;
        flex-direction: column;
    }

    header{
        display: flex;
        flex-direction: column-reverse;
    }

    .nav-container{
        display: flex;
        flex-direction: row;
        width: 900px;
        margin-top: 2em;
    }

    .footer-home{
        gap: 3em;
        margin-top: 5em;
    }

    .my-link{
        font-weight: 700;
    }
        
    .about-img{
        width: 20%;
    }

    .about-title{
        margin-top: 0.6em;
        font-size: 3rem;
        margin-bottom: 0.5em;
    }

    .writing-container{
        max-width: 800px;
        margin: 0 auto;
    }
    .writing{
        font-size: 1rem;
    }

    .blog-card-container{
        max-width: 800px;
    }

    .blog-card{
        padding-bottom: 1em;
    }

    .project-tag{
        border: solid 1px;
    }

    .nav-block-link{
    border-radius: 10px;
    padding: 1em;
    transition: 
    transform 0.2s ease;    /* scale transition */
}

    .nav-block-link:hover{
    transform: scale(1.1);
    }

    .icon{
            transform: scale(1.3);
            transition: 
            transform 0.2s ease,
            color 0.3s ease;  
            color: rgb(179, 177, 177);
    }

    .icon:hover{
        color: rgb(247, 243, 243);
        transform: scale(1.5);
    }


    .footer-about{
        display:flex;
        gap: 3em;
    }

    .share-icon{
        transform: scale(1.3);
        top: 15px;
        right: 15px;
    }

    .blog-card-arrow{
        transform: scale(1.3);
        bottom: 20px
    }

    .back-btn{
        transform: scale(1.3);
        color: rgb(179, 177, 177);
        transition: 
        transform 0.4s ease,
        color 0.3s ease;  
        color: rgb(153, 151, 151);
    }

    .back-btn:hover{
        color: rgb(224, 219, 219);
        transform: scale(1.6);
    }

    .blog-post-container{
        max-width: 700px;
        margin: 3em auto 3em auto;
    }

    .nav-block:hover{
        opacity: 0.6;
    }

    .nav-block{
        font-weight: 200;
    }

    .blog-card{
        transition: transform 0.3s ease, box-shadow 0.3s ease;
    }

    .blog-card:hover{
        transform: scale(1.03);
        box-shadow: 0 0 5px #af5aec;
    }
}

